importing sass into stylesheets fixes spacing of Home route

--- a/daredevil_frontend/src/index.scss
+++ b/daredevil_frontend/src/index.scss
@@ -1,7 +1,7 @@
 // Use the entire theme
 @use "@progress/kendo-theme-default/scss/all.scss" as * with ($kendo-colors: (app-surface: #3d3d3d,
     on-app-surface: #3FAE6A,
-    primary: #213547,
+    primary: #3d3d3d,
     primary-on-surface: #3FAE6A,
     secondary: #3FAE6A,
     secondary-on-surface: #3d3d3d,
